Write footer in sass

--- a/scss/_mainSection.scss
+++ b/scss/_mainSection.scss
@@ -20,3 +20,9 @@ main {
         }
     }
 }
+
+@import "./overmij";
+@import "./clinics";
+@import "./verhuur";
+@import "./referenties";
+@import "./contact";
