--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,8 +52,4 @@ input[type=number] {
 @import "./header";
 @import "./home";
 @import "./mainSection";
-@import "./overmij";
-@import "./clinics";
-@import "./verhuur";
-@import "./referenties";
-@import "./contact";
+@import "./footer";
